# jarvis-ai-os

./: JARVIS_README.md  README.md  SIMPLE_README.md  docker-compose.yml  jarvis.py  jarvis_simple.py  requirements.txt
backend/: .env.example  Dockerfile  README.md  init.sql  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth_utils.py  dependencies.py  schemas.py
backend/app/api/v1/: auth.py  chat.py  memory.py  router.py  voice.py
backend/app/application/: interfaces.py
backend/app/application/services/: auth_service.py  chat_service.py  memory_service.py
backend/app/domain/: entities.py  exceptions.py  repositories.py
backend/app/infrastructure/: database.py  logging.py  models.py  redis.py
backend/app/infrastructure/ai/: openai_client.py
backend/app/infrastructure/repositories/: __init__.py  conversation_repo.py  memory_repo.py  user_repo.py
backend/tests/: conftest.py  test_api.py  test_auth_service.py  test_entities.py  test_repositories.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/electron/: main.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  MessageList.tsx  Sidebar.tsx
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx
frontend/src/services/: api.ts  apiClient.ts
frontend/src/store/: authStore.ts  chatStore.ts
