[tool.poetry]
name = "jarvis-backend"
version = "0.1.0"
description = "Jarvis AI OS — Intelligent Assistant Backend"
authors = ["Jarvis Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = { version = "^0.29.0", optional = true }
aiosqlite = "^0.20.0"
alembic = "^1.13.0"
redis = "^5.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
openai = "^1.35.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "^4.2.0"
python-multipart = "^0.0.9"
websockets = "^12.0"
httpx = "^0.27.0"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
structlog = "^24.2.0"
pgvector = "^0.3.0"
tenacity = "^8.5.0"
aiofiles = "^24.1.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
factory-boy = "^3.3.0"
httpx-ws = { extras = ["async"], version = "^0.6.0" }
faker = "^25.0.0"

[tool.poetry.scripts]
jarvis = "app.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "C4", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
